@@ -1030,7 +1030,6 @@
   <block id="7a035a915239cf76211880a31a8e3764" category="cell">Recherchez un volume, un dossier ou un fichier dans *tous les fichiers de sauvegarde* par nom de volume partiel ou complet, nom de dossier/fichier partiel ou complet, plage de tailles et filtres de recherche supplémentaires</block>
   <block id="c97292ed2a85b61c46eda83c997f6a9a" category="cell">La restauration de volumes et de fichiers fonctionne avec les fichiers de sauvegarde stockés dans Amazon S3, Azure Blob, Google Cloud et NetApp StorageGRID</block>
   <block id="4b41d0742a9aae0ba9c0d4a963b3f0d8" category="cell">Restaurez des volumes, des dossiers et des fichiers depuis StorageGRID sur des sites sans accès à Internet</block>
-  <block id="2deb7493de6dd6e8fd3126d72d730f68" category="cell">Non pris en charge sur les sites sombres</block>
   <block id="fa6009564cbbb803ab9e939ec7396236" category="cell">Ne gère pas les fichiers qui ont été renommés ou supprimés</block>
   <block id="609c9e9bd29468f2ba84839f3741b886" category="cell">Gère les répertoires nouvellement créés/supprimés/renommés et les fichiers nouvellement créés/supprimés/renommés</block>
   <block id="7676f4eb0750d027aaf39357e74a6f0a" category="cell">Parcourez les résultats sur les clouds publics et privés</block>
@@ -1064,7 +1063,6 @@
   <block id="e191225ef89ae4b4097edff77c5ad2a5" category="list-text">Pour Amazon S3, le connecteur peut être déployé dans AWS ou dans votre site</block>
   <block id="2bdfeeb4dec8a7b723d287568533182e" category="list-text">Pour Azure Blob, le connecteur peut être déployé dans Azure ou dans votre site</block>
   <block id="477b6dc7ebfe6a69105359bdce55f421" category="list-text">Pour Google Cloud Storage, le connecteur doit être déployé dans votre VPC Google Cloud Platform</block>
-  <block id="e379a23dde4555ac0507594521c2f485" category="list-text">Pour StorageGRID, le connecteur doit être déployé sur site</block>
   <block id="b1b998a9bc88754640934520205257d6" category="paragraph">Notez que les références aux « systèmes ONTAP sur site » incluent les systèmes FAS, AFF et ONTAP Select.</block>
   <block id="2e43b583329f5406f8eb83df6ec39874" category="admonition">Vous ne pouvez pas restaurer des dossiers ou des fichiers si le fichier de sauvegarde a été configuré avec DataLock &amp; ransomware. Dans ce cas, vous pouvez restaurer tout le volume à partir du fichier de sauvegarde, puis accéder aux fichiers dont vous avez besoin.</block>
   <block id="515ab291ab79ec8cfa9e1523b5a9a8ef" category="section-title">Restauration de volumes à l'aide de Browse &amp; Restore</block>
@@ -1161,7 +1159,6 @@
   <block id="08f59a930621019b7b2d289b74ed3bf2" category="section-title">Rechercher et restaurer les environnements de travail et les fournisseurs de stockage objet pris en charge</block>
   <block id="e1ddf1ac9e59a50d9ac5683a1d33e13a" category="cell">Destination Environnement de travail ifdef::aws[]</block>
   <block id="1c01241cf7c3489f40f6f12fb4239c09" category="paragraph">Pour la recherche et la restauration, le connecteur peut être installé aux emplacements suivants :</block>
-  <block id="b3099050d137cae2d6b32ee13fa2a9a2" category="list-text">Pour StorageGRID, le connecteur doit être déployé dans vos locaux avec une connexion Internet</block>
   <block id="7c9a067ed7fc3d318d415405ab0cb349" category="list-text">Configuration requise pour le cluster :</block>
   <block id="042e2868bd27cf0f2d07239f80a976dd" category="list-text">La version ONTAP doit être supérieure ou égale à 9.8.</block>
   <block id="6f0cd96277bd61a1a3f4c2504033ded7" category="list-text">La VM de stockage (SVM) sur laquelle réside le volume doit avoir une LIF de données configurée.</block>
@@ -1765,7 +1762,6 @@
   <block id="83e93965854a9ee03d55a2d15f2e8dc7" category="list-text">La fonction de recherche et de restauration permet de restaurer 1 fichier à la fois.</block>
   <block id="7a6f7d393f4de35501272976e1ba9e03" category="list-text">Parcourir et restaurer et Rechercher et restaurer peut restaurer 1 dossier à la fois.</block>
   <block id="5f5966e9da5716290dfc2b88ceeb2217" category="list-text">Le fichier en cours de restauration doit être dans la même langue que celle du volume de destination. Vous recevrez un message d'erreur si les langues ne sont pas les mêmes.</block>
-  <block id="012009e84c36a8660d26e3a3201d2fe9" category="list-text">La restauration du niveau fichier à l'aide de la fonction Rechercher et restaurer n'est pas prise en charge lorsque le connecteur est installé sur un site sans accès à Internet (site sombre).</block>
   <block id="9608aa854ca5f36a89549c7fae2a8010" category="summary">Commencez à sauvegarder des données d'Cloud Volumes ONTAP vers Amazon S3 en quelques étapes.</block>
   <block id="9d811f8ab4335c82eeb7d1477874bc1c" category="doc">Sauvegarde des données Cloud Volumes ONTAP dans Amazon S3</block>
   <block id="77f3b81e1d7c5ed627835fb76acd97c6" category="inline-link">Contrat annuel AWS</block>
@@ -2756,7 +2752,6 @@
   <block id="373e31603b5a78ab3bc84cbe57c892b5" category="paragraph">Chaque politique de sauvegarde fournit une section pour _Archival_ que vous pouvez appliquer à vos fichiers de sauvegarde.</block>
   <block id="0776412162b9ad0d387bbf818146d659" category="sidebar">Tiers de stockage d'archivage Google pris en charge</block>
   <block id="91770f038cd944a1d3b9b347edeb2b10" category="sidebar">Nouveautés</block>
-  <block id="442630401ddd0f14988d739183c35505" category="list-text">Le mode WORM/Compliance d'un magasin d'objets est actuellement pris en charge uniquement sur Amazon S3 et StorageGRID. Il s'agit de la fonctionnalité DataLock, qui doit être gérée à l'aide des paramètres Cloud Backup.</block>
   <block id="b2ff0fb046b03e40e599f1561ed5ebd3" category="list-text">La restauration des volumes FlexGroup vers des volumes FlexVol, ou des volumes FlexVol vers des volumes FlexGroup n'est pas prise en charge.</block>
   <block id="c911798e68210cf43e7a5a85f31ebebe" category="paragraph">Pour commencer à utiliser les API Cloud Backup, vous devez obtenir un jeton utilisateur, votre identifiant de compte BlueXP et l'ID connecteur BlueXP.</block>
   <block id="30bc6b6cbbb254a1299f2544d8a09731" category="paragraph">Lorsque vous passez des appels API, vous ajoutez le jeton utilisateur dans l'en-tête autorisation et l'ID connecteur BlueXP dans l'en-tête x-agent-ID. Vous devez utiliser l'ID de compte BlueXP dans les API.</block>
@@ -2778,7 +2773,6 @@
   <block id="ad28f8f849480a4631fcbda2422f9afa" category="paragraph">Cloud Backup propose un modèle de paiement à l'utilisation avec des licences basées sur la consommation. Après votre abonnement sur le marché de votre fournisseur cloud, vous payez par Gio pour les données sauvegardées, sans paiement initial. Votre fournisseur cloud vous facturé mensuellement.</block>
   <block id="2802742de18e4e6fd33742e9f320577d" category="paragraph">Les copies de sauvegarde sont stockées dans un magasin d'objets créé par BlueXP dans votre compte cloud. Chaque cluster/environnement de travail est équipé d'un magasin d'objets, et BlueXP a indiqué le magasin d'objets comme suit : « netapp-backup-clusterUUID ». Veillez à ne pas supprimer ce magasin d'objets.</block>
   <block id="bea14d044add005ebbc3ac7671a9bac7" category="list-text">Si vous créez des copies Snapshot locales sur le volume de destination SnapMirror (indépendamment des étiquettes SnapMirror utilisées), ces snapshots ne seront pas déplacés vers le cloud en tant que sauvegardes. Pour le moment, vous devrez créer une règle Snapshot avec les étiquettes souhaitées pour le volume DP source afin que Cloud Backup puisse les sauvegarder.</block>
-  <block id="a5de9c26eaee9b57d8bcd1ff4d49f888" category="list-text">Les sauvegardes de volumes FlexGroup ne peuvent pas être déplacées vers le stockage d'archivage. Elles ne peuvent pas non plus utiliser le verrouillage des données et la protection par ransomware.</block>
   <block id="9defdde711056fe7bbfd4e7bfc21de90" category="inline-link">En savoir plus sur les terminaux de passerelle</block>
   <block id="5395d21beaf13b09f8644c9586a34bbb" category="paragraph">Le terminal de passerelle VPC doit déjà exister dans votre VPC.<block ref="efccbdf33ae534e50311d23fe5ad227e" category="inline-link-rx"></block>.</block>
   <block id="172483accc796d1a4b4deb4fe01ad8d4" category="list-text">Vérifiez que les autorisations « s3:PutBuckePolicy » et « s3:PutBuckeOwnershipControls » font partie du rôle IAM qui fournit le connecteur BlueXP avec les autorisations.</block>
@@ -3427,7 +3421,6 @@
   <block id="98c4206e171ce9b62f1dadef4f4da528" category="list-text">Votre StorageGRID doit être<block ref="a62572fc02ca2a884f6a1e42d38d1d55" category="inline-link-rx"></block></block>
   <block id="68aa7e5e44b2aff449b0543b49e563bd" category="inline-link-macro">En savoir plus sur les niveaux d'archivage AWS</block>
   <block id="9ac50560d5fb673e5d33906e46dd98c6" category="list-text">Le stockage d'archivage est actuellement pris en charge uniquement pour les classes de stockage AWS S3. Vous pouvez choisir de transférer les sauvegardes vers un stockage AWS S3 Glacier ou S3 Glacier Deep Archive. <block ref="99a80ab47f2b3c111e86aba05224c42e" category="inline-link-macro-rx"></block>.</block>
-  <block id="ec1bc3c970d4b572c193f7ae566018d4" category="list-text">Vous devez vous inscrire à un abonnement AWS S3 pour l'espace de stockage où se trouvent vos sauvegardes.</block>
   <block id="832d0ea7eab67f52faa651ad1475e14a" category="paragraph">Lorsque vous définissez les paramètres d'archivage pour la règle de sauvegarde de votre cluster, vous entrez vos identifiants du fournisseur de cloud et sélectionnez la classe de stockage à utiliser. Cloud Backup crée un compartiment cloud lorsque vous activez la sauvegarde pour le cluster. Les informations requises pour le stockage d'archivage AWS sont présentées ci-dessous.</block>
   <block id="1561c5b8437cf775ebce2ca08e284b68" category="inline-image-macro">Copie d'écran des informations dont vous avez besoin pour archiver les fichiers de sauvegarde de StorageGRID vers AWS S3.</block>
   <block id="4e82138d6097530281cd6cb668514613" category="paragraph"><block ref="4e82138d6097530281cd6cb668514613" category="inline-image-macro-rx" type="image"></block></block>
@@ -3440,4 +3433,13 @@
   <block id="fe3f1bd257c4451d8f8bcbf9a1a58d34" category="paragraph"><block ref="1247b899b5e6800d8fd9e850903ad55a" category="inline-link-rx"></block>.</block>
   <block id="275b9b785d71f45bb8f134005ece056a" category="paragraph">*Remarque :* lorsque vous interrompez la sauvegarde d'un volume, votre fournisseur de cloud continuera à payer les coûts de stockage objet pour la capacité que les sauvegardes utilisent, sauf si vous <block ref="e2e48247dd6dcee2daca407937463dc9" category="inline-xref-macro-rx"></block>.</block>
   <block id="46fb0ddeabbcb2b9784add28928cfe7a" category="paragraph">Notez que la règle que vous souhaitez appliquer aux volumes doit déjà exister.</block>
+  <block id="da241970bf8ab518d4b9fd4ec20e3a48" category="list-text">Vous devez vous inscrire à un compte Amazon S3 pour l'espace de stockage où se trouvent vos sauvegardes.</block>
+  <block id="3c6238f54517e5cf7923ae4c33a5eff9" category="list-text">Pour StorageGRID, le connecteur doit être déployé sur site, avec ou sans accès à Internet</block>
+  <block id="cd1cceb157b5982d899b66d18217af64" category="list-text">Si vous utilisez un connecteur sur un site sombre, les informations de catalogue indexé sont stockées sur le connecteur (nécessite la version 3.9.25 ou supérieure du connecteur).</block>
+  <block id="e083799711dc9b588bbb440525564506" category="section-title">L'assistance a été ajoutée pour restaurer des données à l'aide de la fonction de recherche et de restauration sur des sites sans accès à Internet</block>
+  <block id="7582bcce7533bd53ab590d04904ea75b" category="paragraph">Si vous sauvegardez des données à partir d'un cluster ONTAP sur site vers StorageGRID sur un site sans accès Internet, également appelé site sombre ou hors ligne, vous pouvez maintenant utiliser l'option de restauration pour restaurer les données si nécessaire. Cette fonctionnalité requiert le déploiement du connecteur BlueXP (version 3.9.25 ou ultérieure) sur le site hors ligne.</block>
+  <block id="c9ec78264dce9938676b736265201e28" category="inline-link">Voir comment restaurer les données ONTAP à l'aide de la fonction Rechercher et AMP ; Restaurer</block>
+  <block id="74aacc002c6d6d85e9786012bf71af08" category="paragraph"><block ref="fbe0ce057e5d8013a227c4cb944242a5" category="inline-link-rx"></block>.<block ref="eb618b89294e80d594faecbc4641afee" category="inline-link-rx"></block>.</block>
+  <block id="4f60787e5fe87ac0aa425be67237edec" category="list-text">Les sauvegardes de volumes FlexGroup ne peuvent pas être déplacées vers le stockage d'archivage. Elles ne peuvent pas non plus utiliser le verrouillage des données et la protection par ransomware.</block>
+  <block id="1f973e0276bdcc7629141de9466f59f2" category="list-text">Le mode WORM/Compliance d'un magasin d'objets est actuellement pris en charge uniquement sur Amazon S3 et StorageGRID. Il s'agit de la fonctionnalité DataLock, qui doit être gérée à l'aide des paramètres Cloud Backup, et non à l'aide de l'interface du fournisseur cloud.</block>
 </blocks>
