@@ -42,6 +42,14 @@ Dans les versions antérieures, le rôle d'administrateur du stockage était req
 
 
 
+=== L'assistance a été ajoutée pour restaurer des données à l'aide de la fonction de recherche et de restauration sur des sites sans accès à Internet
+
+Si vous sauvegardez des données à partir d'un cluster ONTAP sur site vers StorageGRID sur un site sans accès Internet, également appelé site sombre ou hors ligne, vous pouvez maintenant utiliser l'option de restauration pour restaurer les données si nécessaire. Cette fonctionnalité requiert le déploiement du connecteur BlueXP (version 3.9.25 ou ultérieure) sur le site hors ligne.
+
+https://docs.netapp.com/us-en/cloud-manager-backup-restore/task-restore-backups-ontap.html#restoring-ontap-data-using-search-restore["Voir comment restaurer les données ONTAP à l'aide de la fonction Rechercher et AMP ; Restaurer"].https://docs.netapp.com/us-en/cloud-manager-setup-admin/task-install-connector-onprem-no-internet.html["Découvrez comment installer le connecteur dans votre site hors ligne"].
+
+
+
 === Possibilité de télécharger la page des résultats de la surveillance des travaux sous forme de rapport .csv
 
 Après avoir filtré la page surveillance des travaux pour afficher les travaux et les actions qui vous intéressent, vous pouvez maintenant générer et télécharger un fichier .csv de ces données. Vous pouvez ensuite analyser les informations ou envoyer le rapport à d'autres personnes de votre organisation. https://docs.netapp.com/us-en/cloud-manager-backup-restore/task-monitor-backup-jobs.html#download-job-monitoring-results-as-a-report["Découvrez comment générer un rapport de surveillance des travaux"].
